# goldensetauditor

./: .gitignore  CHANGELOG.md  CONTEXT_HANDOFF.md  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: demo_golden_set.csv
scripts/: generate_demo_reports.py
src/goldensetauditor/: __init__.py  core.py
tests/: test_goldensetauditor.py
