[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldensetauditor"
version = "0.3.0"
description = "Audit golden evaluation datasets for LLM/RAG application quality risks."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Sidharth Kriplani"}]
dependencies = ["pandas>=1.5", "numpy>=1.23"]
keywords = ["rag", "llm-evaluation", "golden-set", "dataset-quality", "evaluation"]

[tool.setuptools.packages.find]
where = ["src"]
